--- a/src/android/NotSettingsPage.xaml
+++ b/src/android/NotSettingsPage.xaml
@@ -83,6 +83,8 @@
 					<Button x:Name="OccDecButton" VerticalOptions="Center" />
 				</StackLayout>
 
+				<Label x:Name="UrgentTip" HorizontalOptions="Center" />
+
 				<Label />
 
 			</StackLayout>
