--- a/src/android/AboutPage.xaml
+++ b/src/android/AboutPage.xaml
@@ -17,6 +17,7 @@
 
 				<Button x:Name="ManualsButton" HorizontalOptions="Center" />
 				<Button x:Name="HelpButton" HorizontalOptions="Center" />
+				<Button x:Name="RepeatTips" HorizontalOptions="Center" />
 
 				<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
 					WidthRequest="200" Color="#505050" Margin="9" />
