--- a/src/android/LogPage.xaml
+++ b/src/android/LogPage.xaml
@@ -1,11 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RD_AAOW.LogPage">
 
 	<StackLayout>
-
-		<Label x:Name="HeaderLabel" HorizontalOptions="Center" IsVisible="false" />
 
 		<ListView x:Name="MainLog" HorizontalOptions="Fill" />
 
@@ -16,13 +14,16 @@
 
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="70" />
+				<ColumnDefinition Width="70" />
 				<ColumnDefinition />
+				<ColumnDefinition Width="70" />
 				<ColumnDefinition Width="70" />
 			</Grid.ColumnDefinitions>
 
 			<Button x:Name="ScrollUp" VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="0" />
-			<Button x:Name="CenterButton" VerticalOptions="Center" HorizontalOptions="Fill" Grid.Column="1" />
-			<Button x:Name="ScrollDown" VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="2" />
+			<Button x:Name="ScrollDown" VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="1" />
+			<Button x:Name="CenterButton" VerticalOptions="Center" HorizontalOptions="Fill" Grid.Column="2" />
+			<Button x:Name="MenuButton" VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="4" />
 		</Grid>
 
 	</StackLayout>
