--- a/src/android/AboutPage.xaml
+++ b/src/android/AboutPage.xaml
@@ -1,53 +1,49 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RD_AAOW.AboutPage">
 
-	<StackLayout>
+	<ScrollView>
+		<StackLayout>
+			<Label x:Name="AboutLabel" />
 
-		<Label x:Name="HeaderLabel" />
+			<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
+					WidthRequest="200" Color="#505050" Margin="6" />
 
-		<ScrollView>
-			<StackLayout >
+			<Button x:Name="ManualsButton" HorizontalOptions="Center" />
+			<Button x:Name="HelpButton" HorizontalOptions="Center" />
+			<Button x:Name="RepeatTips" HorizontalOptions="Center" />
 
-				<Label x:Name="AboutLabel" />
+			<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
+					WidthRequest="200" Color="#606060" Margin="9" />
 
-				<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
-					WidthRequest="200" Color="#505050" Margin="9" />
+			<Label />
+			<Label x:Name="GenericSettingsLabel" />
+			<Label x:Name="RestartTipLabel" />
 
-				<Button x:Name="ManualsButton" HorizontalOptions="Center" />
-				<Button x:Name="HelpButton" HorizontalOptions="Center" />
-				<Button x:Name="RepeatTips" HorizontalOptions="Center" />
-
-				<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
-					WidthRequest="200" Color="#505050" Margin="9" />
-
-				<Label x:Name="GenericSettingsLabel" />
-				<Label x:Name="RestartTipLabel" />
-
-				<StackLayout Orientation="Horizontal">
-					<Label x:Name="LanguageLabel" VerticalOptions="Center" />
-					<Button x:Name="LanguageSelector" VerticalOptions="Center" />
-				</StackLayout>
-
-				<StackLayout Orientation="Horizontal">
-					<Label x:Name="FontSizeLabel" VerticalOptions="Center" />
-
-					<Button x:Name="FontSizeInc" VerticalOptions="Center" />
-					<Label x:Name="FontSizeField" VerticalOptions="Center" />
-					<Button x:Name="FontSizeDec" VerticalOptions="Center" />
-				</StackLayout>
-
-				<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
-					WidthRequest="200" Color="#505050" Margin="9" />
-
-				<Label x:Name="HelpTextLabel" />
-
-				<Label />
-
+			<StackLayout Orientation="Horizontal">
+				<Label x:Name="LanguageLabel" VerticalOptions="Center" />
+				<Button x:Name="LanguageSelector" VerticalOptions="Center" />
 			</StackLayout>
-		</ScrollView>
 
-	</StackLayout>
+			<StackLayout Orientation="Horizontal">
+				<Label x:Name="FontSizeLabel" VerticalOptions="Center" />
+
+				<Button x:Name="FontSizeInc" VerticalOptions="Center" />
+				<Label x:Name="FontSizeField" VerticalOptions="Center" />
+				<Button x:Name="FontSizeDec" VerticalOptions="Center" />
+			</StackLayout>
+
+			<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
+					WidthRequest="200" Color="#505050" Margin="9" />
+
+			<Label />
+			<Label x:Name="HelpHeaderLabel" />
+			<Label x:Name="HelpTextLabel" />
+
+			<Label />
+
+		</StackLayout>
+	</ScrollView>
 </ContentPage>
-   
+    
