--- a/src/android/MasterPage.xaml
+++ b/src/android/MasterPage.xaml
@@ -1,11 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<CarouselPage xmlns="http://xamarin.com/schemas/2014/forms"
+<NavigationPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:mypages="clr-namespace:RD_AAOW"
              x:Class="RD_AAOW.MasterPage">
 
-	<mypages:LogPage x:Name="LogPage" />
-	<mypages:SettingsPage x:Name="SettingsPage" />
-	<mypages:NotSettingsPage x:Name="NotSettingsPage" />
-	<mypages:AboutPage x:Name="AboutPage" />
-</CarouselPage>
+</NavigationPage>
