--- a/src/android/SettingsPage.xaml
+++ b/src/android/SettingsPage.xaml
@@ -1,93 +1,88 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RD_AAOW.SettingsPage">
 
-	<StackLayout >
-		<Label x:Name="HeaderLabel" />
+	<ScrollView>
+		<StackLayout>
 
-		<ScrollView>
-			<StackLayout>
+			<!-- Мастер оповещений -->
+			<Label x:Name="NotWizardLabel" />
+			<Button x:Name="NotWizardButton" HorizontalOptions="Center" />
 
-				<!-- Мастер оповещений -->
-				<Label x:Name="NotWizardLabel" />
-				<Button x:Name="NotWizardButton" HorizontalOptions="Center" />
-
-				<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
+			<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
 					WidthRequest="200" Color="#505050" Margin="12" />
 
-				<!-- Настройки основного приложения -->
-				<Label x:Name="AppSettingsLabel" />
+			<!-- Настройки основного приложения -->
+			<Label x:Name="AppSettingsLabel" />
 
-				<StackLayout Orientation="Horizontal">
-					<Switch x:Name="KeepScreenOnSwitch" VerticalOptions="Center" />
-					<Label x:Name="KeepScreenOnLabel" VerticalTextAlignment="Center" />
-				</StackLayout>
-
-				<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
-					WidthRequest="200" Color="#505050" Margin="12" />
-
-				<!-- Настройки службы -->
-				<Label x:Name="ServiceSettingsLabel" />
-
-				<StackLayout Orientation="Horizontal">
-					<Switch x:Name="AllowStartSwitch" VerticalOptions="Center" />
-					<Label x:Name="AllowStartLabel" VerticalTextAlignment="Center" />
-				</StackLayout>
-
-				<Label x:Name="AllowStartTip" HorizontalOptions="Center" />
-				<Button x:Name="AllowStartButton" HorizontalOptions="Center" />
-
-				<StackLayout Orientation="Horizontal">
-					<Switch x:Name="AllowSoundSwitch" VerticalOptions="Center" />
-					<Label x:Name="AllowSoundLabel" VerticalTextAlignment="Center" />
-				</StackLayout>
-
-				<Button x:Name="SaveQuietSound" HorizontalOptions="Center" />
-
-				<StackLayout Orientation="Horizontal">
-					<Switch x:Name="AllowLightSwitch" VerticalOptions="Center" />
-					<Label x:Name="AllowLightLabel" VerticalTextAlignment="Center" />
-				</StackLayout>
-
-				<StackLayout Orientation="Horizontal">
-					<Switch x:Name="AllowVibroSwitch" VerticalOptions="Center" />
-					<Label x:Name="AllowVibroLabel" VerticalTextAlignment="Center" />
-				</StackLayout>
-
-				<!-- Настройки журнала -->
-				<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
-					WidthRequest="200" Color="#505050" Margin="12" />
-
-				<Label x:Name="LogSettingsLabel" />
-
-				<StackLayout Orientation="Horizontal">
-					<Switch x:Name="NewsAtTheEndSwitch" VerticalOptions="Center" />
-					<Label x:Name="NewsAtTheEndLabel" VerticalTextAlignment="Center" />
-				</StackLayout>
-
-				<StackLayout Orientation="Horizontal">
-					<Switch x:Name="ReadModeSwitch" VerticalOptions="Center" />
-					<Label x:Name="ReadModeLabel" VerticalTextAlignment="Center" />
-				</StackLayout>
-
-				<StackLayout Orientation="Horizontal" Margin="3">
-					<Label x:Name="FontSizeFieldLabel" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
-
-					<Button x:Name="FontSizeIncButton" HorizontalOptions="Start" />
-					<Button x:Name="FontSizeDecButton" HorizontalOptions="Start" />
-				</StackLayout>
-
-				<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
-					WidthRequest="200" Color="#505050" Margin="12" />
-
-				<Label x:Name="CenterButtonLabel" />
-				<Button x:Name="CenterButtonFunction" HorizontalOptions="Center" />
-
-				<Label />
-
+			<StackLayout Orientation="Horizontal">
+				<Switch x:Name="KeepScreenOnSwitch" VerticalOptions="Center" />
+				<Label x:Name="KeepScreenOnLabel" VerticalTextAlignment="Center" />
 			</StackLayout>
-		</ScrollView>
 
-	</StackLayout>
+			<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
+					WidthRequest="200" Color="#505050" Margin="12" />
+
+			<!-- Настройки службы -->
+			<Label x:Name="ServiceSettingsLabel" />
+
+			<StackLayout Orientation="Horizontal">
+				<Switch x:Name="AllowStartSwitch" VerticalOptions="Center" />
+				<Label x:Name="AllowStartLabel" VerticalTextAlignment="Center" />
+			</StackLayout>
+
+			<Label x:Name="AllowStartTip" HorizontalOptions="Center" />
+			<Button x:Name="AllowStartButton" HorizontalOptions="Center" />
+
+			<StackLayout Orientation="Horizontal">
+				<Switch x:Name="AllowSoundSwitch" VerticalOptions="Center" />
+				<Label x:Name="AllowSoundLabel" VerticalTextAlignment="Center" />
+			</StackLayout>
+
+			<Button x:Name="SaveQuietSound" HorizontalOptions="Center" />
+
+			<StackLayout Orientation="Horizontal">
+				<Switch x:Name="AllowLightSwitch" VerticalOptions="Center" />
+				<Label x:Name="AllowLightLabel" VerticalTextAlignment="Center" />
+			</StackLayout>
+
+			<StackLayout Orientation="Horizontal">
+				<Switch x:Name="AllowVibroSwitch" VerticalOptions="Center" />
+				<Label x:Name="AllowVibroLabel" VerticalTextAlignment="Center" />
+			</StackLayout>
+
+			<!-- Настройки журнала -->
+			<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
+					WidthRequest="200" Color="#505050" Margin="12" />
+
+			<Label x:Name="LogSettingsLabel" />
+
+			<StackLayout Orientation="Horizontal">
+				<Switch x:Name="NewsAtTheEndSwitch" VerticalOptions="Center" />
+				<Label x:Name="NewsAtTheEndLabel" VerticalTextAlignment="Center" />
+			</StackLayout>
+
+			<StackLayout Orientation="Horizontal">
+				<Switch x:Name="ReadModeSwitch" VerticalOptions="Center" />
+				<Label x:Name="ReadModeLabel" VerticalTextAlignment="Center" />
+			</StackLayout>
+
+			<StackLayout Orientation="Horizontal" Margin="3">
+				<Label x:Name="FontSizeFieldLabel" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
+
+				<Button x:Name="FontSizeIncButton" HorizontalOptions="Start" />
+				<Button x:Name="FontSizeDecButton" HorizontalOptions="Start" />
+			</StackLayout>
+
+			<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
+					WidthRequest="200" Color="#505050" Margin="12" />
+
+			<Label x:Name="CenterButtonLabel" />
+			<Button x:Name="CenterButtonFunction" HorizontalOptions="Center" />
+
+			<Label />
+
+		</StackLayout>
+	</ScrollView>
 </ContentPage>
